Address Compose review feedback